--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,8 @@ license = GPLv3
 author = Petr Horacek
 author_email = phoracek@redhat.com
 url = https://www.github.com/netsu-project/netsu-plugin-networkmanager
+
+[files]
+data_files =
+  /usr/lib/systemd/system =
+    conf/netsu-nm.service
