--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,15 @@ envlist = py3
 
 [testenv]
 deps =
+  -rtest-requirements.txt
   pep8
   pyflakes
   pytest-cov
 commands =
   pep8 netsu_plugin_networkmanager tests
   pyflakes netsu_plugin_networkmanager tests
-  pytest --cov {envsitepackagesdir}/netsu_plugin_networkmanager -v tests
+  pytest \
+    --cov {envsitepackagesdir}/netsu_plugin_networkmanager \
+	-m {env:PYTEST_MARKERS:unit} \
+	-v \
+	tests
